# mailcore2

./: .arcconfig  .gitignore  .gitmodules  .sourcery.yml  CMakeLists.txt  CMakeSettings.json  LinuxMain.swift  Package.swift  README.md  RSMMailCore.podspec
src/: AbstractMessageRendererCallbackWrapper.h  CMakeLists.txt  MailCore.h
src/async/imap/: MCIMAPAppendMessageOperation.cpp  MCIMAPAsyncConnection.cpp  MCIMAPAsyncConnection.h  MCIMAPAsyncSession.cpp  MCIMAPAsyncSession.h  MCIMAPCheckAccountOperation.cpp  MCIMAPConnectOperation.cpp  MCIMAPCopyMessagesOperation.cpp  MCIMAPCreateFolderOperation.cpp  MCIMAPCustomCommandOperation.cpp  MCIMAPDeleteFolderOperation.cpp  MCIMAPExpungeOperation.cpp  MCIMAPFetchContentOperation.cpp  MCIMAPFetchFoldersOperation.cpp  MCIMAPFetchMessagesOperation.cpp  MCIMAPFetchNamespaceOperation.cpp  MCIMAPFetchParsedContentOperation.cpp  MCIMAPFolderInfoOperation.cpp  MCIMAPFolderStatusOperation.cpp  MCIMAPIdentityOperation.cpp  MCIMAPIdleOperation.cpp  MCIMAPIdleOperation.h  MCIMAPMoveMessagesOperation.cpp  MCIMAPMultiDisconnectOperation.cpp  MCIMAPNoopOperation.cpp  MCIMAPOperation.cpp  MCIMAPOperation.h  MCIMAPQuotaOperation.cpp  MCIMAPRenameFolderOperation.cpp  MCIMAPSearchOperation.cpp  MCIMAPStoreFlagsOperation.cpp  MCIMAPStoreLabelsOperation.cpp  MCIMAPSubscribeFolderOperation.cpp
src/async/nntp/: MCNNTPAsyncSession.cpp  MCNNTPAsyncSession.h  MCNNTPCheckAccountOperation.cpp  MCNNTPDisconnectOperation.cpp  MCNNTPFetchAllArticlesOperation.cpp  MCNNTPFetchArticleOperation.cpp  MCNNTPFetchHeaderOperation.cpp  MCNNTPFetchServerTimeOperation.cpp  MCNNTPListNewsgroupsOperation.cpp  MCNNTPOperation.cpp  MCNNTPPostOperation.cpp
src/async/pop/: MCPOPAsyncSession.cpp  MCPOPAsyncSession.h  MCPOPCheckAccountOperation.cpp  MCPOPDeleteMessagesOperation.cpp  MCPOPFetchHeaderOperation.cpp  MCPOPFetchMessageOperation.cpp  MCPOPFetchMessagesOperation.cpp  MCPOPNoopOperation.cpp  MCPOPOperation.cpp
src/async/smtp/: MCSMTPAsyncSession.cpp  MCSMTPAsyncSession.h  MCSMTPCheckAccountOperation.cpp  MCSMTPCheckAccountOperation.h  MCSMTPLoginOperation.cpp  MCSMTPNoopOperation.cpp  MCSMTPOperation.cpp  MCSMTPSendWithDataOperation.cpp
src/c/: CBase+Private.h  CBase.h  CCore.h  module.modulemap
src/c/abstract/: CAbstractMessage.cpp  CAbstractMessage.h  CAbstractMessagePart.cpp  CAbstractMessagePart.h  CAbstractMessageRendererCallback.cpp  CAbstractMessageRendererCallback.h  CAbstractMessageRendererCallbackWrapper.h  CAbstractMultipart.cpp  CAbstractMultipart.h  CAbstractPart.cpp  CAbstractPart.h  CAddress.cpp  CAddress.h  CMessageConstants.h  CMessageHeader.cpp  CMessageHeader.h
src/c/basetypes/: CArray.cpp  CArray.h  CData.cpp  CData.h  CDictionary.cpp  CDictionary.h  CIndexSet.cpp  CIndexSet.h  CObject.cpp  CObject.h  MailCoreString.cpp  MailCoreString.h
src/c/imap/: CIMAPAppendMessageOperation+Private.h  CIMAPAppendMessageOperation.cpp  CIMAPAppendMessageOperation.h  CIMAPAsyncSession.cpp  CIMAPAsyncSession.h  CIMAPBaseOperation+Private.h  CIMAPBaseOperation.cpp  CIMAPBaseOperation.h  CIMAPCapabilityOperation.cpp  CIMAPCapabilityOperation.h  CIMAPCheckAccountOperation.cpp  CIMAPCheckAccountOperation.h  CIMAPCopyMessagesOperation+Private.h  CIMAPCopyMessagesOperation.cpp  CIMAPCopyMessagesOperation.h  CIMAPCustomCommandOperation.cpp  CIMAPCustomCommandOperation.h  CIMAPFetchContentOperation+Private.h  CIMAPFetchContentOperation.cpp  CIMAPFetchContentOperation.h  CIMAPFetchContentToFileOperation.cpp  CIMAPFetchContentToFileOperation.h  CIMAPFetchFoldersOperation.cpp  CIMAPFetchFoldersOperation.h  CIMAPFetchMessagesOperation+Private.h  CIMAPFetchMessagesOperation.cpp  CIMAPFetchMessagesOperation.h  CIMAPFetchNamespaceOperation.cpp  CIMAPFetchNamespaceOperation.h  CIMAPFetchParsedContentOperation.cpp  CIMAPFetchParsedContentOperation.h  CIMAPFolder.cpp  CIMAPFolder.h  CIMAPFolderInfo.cpp  CIMAPFolderInfo.h  CIMAPFolderInfoOperation+Private.h  CIMAPFolderInfoOperation.cpp  CIMAPFolderInfoOperation.h  CIMAPFolderStatus.cpp  CIMAPFolderStatus.h  (+40 more)
src/c/provider/: CMailProvider.cpp  CMailProvider.h  CMailProvidersManager.cpp  CMailProvidersManager.h  CNetService.cpp  CNetService.h
src/c/rfc822/: CAttachment.cpp  CAttachment.h  CMessageBuilder.cpp  CMessageBuilder.h  CMessageParser.cpp  CMessageParser.h  CMessagePart.cpp  CMessagePart.h  CMultipart.cpp  CMultipart.h  MessagePart.swift
src/c/smtp/: CSMTPOperation.cpp  CSMTPOperation.h  CSMTPSession.cpp  CSMTPSession.h
src/c/utils/: CAutoreleasePool.cpp  CAutoreleasePool.h  COperation+Private.h  COperation.cpp  COperation.h
src/cmake/: c.cmake  cmailcore-public-headers.cmake  core.cmake  public-headers-win32.cmake  public-headers.cmake
src/core/abstract/: MCErrorMessage.cpp  MCErrorMessage.h  MCMessageConstants.h
src/core/basetypes/: MCArray.cpp  MCAssert.c  MCAssert.h  MCAutoreleasePool.cpp  MCAutoreleasePool.h  MCBase64.c  MCBase64.h  MCBaseTypes.h  MCBasicLock.h  MCConnectionLoggerUtils.h  MCData.cpp  MCData.h  MCDataDecoderUtils.cpp  MCDefines.h  MCHTMLCleaner.cpp  MCICUTypes.h  MCIndexSet.cpp  MCIndexSet.h  MCLibetpan.cpp  MCLibetpan.h  MCLock.h  MCLog.cpp  MCLog.h  MCMainThreadAndroid.h  MCMainThreadWin32.cpp  MCNull.cpp  MCObject.cpp  MCObject.h  MCOperation.cpp  MCOperation.h  MCOperationQueue.cpp  MCOperationQueue.h  MCString.cpp  MCUtils.h  MCWin32.cpp  MCWin32.h
src/core/imap/: MCIMAPSession.cpp  MCIMAPSession.h
src/core/nntp/: MCNNTPSession.cpp  MCNNTPSession.h
src/core/pop/: MCPOPSession.cpp  MCPOPSession.h
src/core/provider/: MCAccountValidator.cpp  MCAccountValidator.h  MCMXRecordResolverOperation.cpp  MCMailProvider.cpp  MCMailProvidersManager.cpp  MCMailProvidersManager.h  MCNetService.cpp  MCNetService.h
src/core/renderer/: MCHTMLRenderer.cpp  MCHTMLRendererCallback.cpp  MCHTMLRendererCallback.h
src/core/rfc822/: MCAttachment.cpp  MCMessageParser.cpp  MCMessageParser.h  MCMessageParserMac.mm
src/core/security/: MCCertificateUtils.cpp
src/core/smtp/: MCSMTPSession.cpp  MCSMTPSession.h
src/core/zip/: MCZip.cpp  MCZipMac.mm  (+1 more)
src/swift/: swiftmailcore2-Bridging-Header.h
(+357 files in other folders)
